# coaster

./: .coveragerc  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc.js  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  dev_requirements.txt  docs_requirements.txt  pyproject.toml  pytest.ini  runtests.sh  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: pytest.yml  telegram.yml
coaster/: __init__.py  _version.py  annotations.py  app.py  assets.py  auth.py  db.py  docflow.py  gfm.py  logger.py  logging.py  manage.py  nlp.py  roles.py  shortuuid.py  signals.py  sqla.py  sqlalchemy.py  typing.py  user.py  utils.py  views.py
coaster/sqlalchemy/: __init__.py  _compat.py  annotations.py  columns.py  comparators.py  functions.py  immutable_annotation.py  markdown.py  mixins.py  properties.py  registry.py  roles.py  statemanager.py  stateproperty.py
coaster/utils/: __init__.py  classes.py  datetime.py  markdown.py  misc.py  text.py  tsquery.py
coaster/views/: __init__.py  classview.py  decorators.py  misc.py
docs/: Makefile  annotations.rst  app.rst  assets.rst  auth.rst  compat.rst  conf.py  db.rst  docflow.rst  gfm.rst  index.rst  logger.rst  logging.rst  make.bat  manage.rst  nlp.rst  roles.rst  shortuuid.rst  sqlalchemy.rst  typing.rst  user.rst  utils.rst  views.rst
docs/sqlalchemy/: annotations.rst  columns.rst  comparators.rst  functions.rst  immutable_annotation.rst  index.rst  mixins.rst  model.rst  pagination.rst  properties.rst  query.rst  registry.rst  roles.rst  statemanager.rst  stateproperty.rst
docs/utils/: classes.rst  datetime.rst  index.rst  markdown.rst  misc.rst  text.rst  tsquery.rst
docs/views/: classview.rst  decorators.rst  index.rst  misc.rst
instance/: settings.py
src/coaster/: __init__.py  _version.py  app.py  assets.py  auth.py  compat.py  db.py  logger.py  nlp.py  signals.py  typing.py
src/coaster/sqlalchemy/: __init__.py  annotations.py  columns.py  comparators.py  functions.py  immutable_annotation.py  markdown.py  mixins.py  model.py  pagination.py  query.py  registry.py  roles.py  statemanager.py
src/coaster/utils/: __init__.py  classes.py  datetime.py  markdown.py  misc.py  text.py  tsquery.py
src/coaster/views/: __init__.py  classview.py  decorators.py  misc.py
tests/: conftest.py  settings.json  settings.py  settings.toml  settings.yaml  test_annotations.py  test_app.py  test_assets.py  test_auth.py  test_coordinates.py  test_gfm.py  test_loadmodels.py  test_logger.py  test_longlat.py  test_manage.py  test_markdowncolumn.py  test_models.py  test_nlp.py  test_render_with.py  test_roles.py  test_sqlalchemy_annotations.py  test_sqlalchemy_coordinates.py  test_sqlalchemy_markdowncolumn.py  test_sqlalchemy_models.py  test_sqlalchemy_registry.py  test_sqlalchemy_roles.py  test_statemanager.py  test_stateproperty.py  test_url_for.py  test_user.py  test_utils.py  test_utils_markdown.py  test_views.py  test_views_classview.py  test_views_endpointfor.py  test_views_loadmodels.py  test_views_renderwith.py  testing.py
tests/alembic/versions/: 132231d12fcd_test.py
tests/coaster_tests/: __init__.py  app_test.py  assets_test.py  auth_test.py  conftest.py  logger_test.py  nlp_test.py  settings.json  settings.py  settings.toml  settings.yaml  sqlalchemy_annotations_test.py  sqlalchemy_coordinates_test.py  sqlalchemy_markdowncolumn_test.py  sqlalchemy_modelbase_test.py  sqlalchemy_models_test.py  sqlalchemy_registry_test.py  sqlalchemy_roles_test.py  statemanager_test.py  test-manifest.json  testing.py  url_for_test.py  utils_classes_dataclass_test.py  utils_markdown_test.py  utils_test.py  utils_text_test.py  views_classview_test.py  views_endpointfor_test.py  views_loadmodels_test.py  views_renderwith_test.py  views_test.py
tests/coaster_tests/alembic/versions/: 132231d12fcd_test.py
