# Default tool config file. See also setup.cfg for tools that don't yet
# support pyproject.toml.

[build-system]
requires = ['setuptools>=61', 'setuptools_scm[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = 'coaster'
description = 'Coaster for Flask'
readme = 'README.rst'
requires-python = '>=3.9'
keywords = ['coaster', 'flask', 'framework', 'web', 'auth', 'sqlalchemy']
license = { file = 'LICENSE.txt' }
dynamic = ['version']
maintainers = [{ name = 'Hasgeek', email = 'info@hasgeek.com' }]
authors = [{ name = 'Kiran Jonnalagadda' }]
urls = { repository = 'https://github.com/hasgeek/coaster' }
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Framework :: Flask',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Intended Audience :: Developers',
  'Development Status :: 5 - Production/Stable',
  'Topic :: Database',
  'Topic :: Software Development :: Libraries',
]
dependencies = [
  'aniso8601',
  'asgiref',
  'base58>=2.0.0',
  'bleach',
  'blinker',
  'Flask-Assets',
  'Flask-Migrate',
  'Flask-SQLAlchemy',
  'Flask>=2.3',
  'furl',
  'html5lib>=0.999999999',
  'isoweek',
  'Markdown>=3.2.0',
  'markupsafe',
  'pymdown-extensions>=8.0',
  'pytz',
  'semantic-version>=2.8.0',
  'sqlalchemy-utils',
  'SQLAlchemy>=2.0.4',
  'tldextract',
  'typing_extensions>=4.8.0',
  'Unidecode',
  'werkzeug',
]

[tool.setuptools.dynamic]
version = { attr = 'coaster._version.__version__' }

[tool.setuptools.packages.find]
where = ['src']

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | buck-out
  | build
  | dist
  | node_modules
  | funnel/assets
)/
'''

[tool.isort]
# Some isort functionality is replicated in ruff, which should have matching config
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
line_length = 88
order_by_type = true
use_parentheses = true
combine_as_imports = true
split_on_trailing_comma = false
extra_standard_library = ['typing_extensions']
known_first_party = ['coaster']
default_section = 'THIRDPARTY'
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.pytest.ini_options]
pythonpath = 'src'
required_plugins = [
  'pytest-asyncio',
  'pytest-env',
  'pytest-rerunfailures',
  'pytest-socket',
]
asyncio_mode = 'auto'
minversion = '6.0'
addopts = '--doctest-modules --ignore setup.py --cov-report=term-missing --strict-markers'
doctest_optionflags = ['ALLOW_UNICODE', 'ALLOW_BYTES']
env = ['FLASK_ENV=testing']
markers = ["has_server_name: App fixture has a server name in config"]

[tool.pylint.master]
max-parents = 10
init-hook = '''
import os, astroid.bases, pathlib
# Tell Pylint where to find packages from within tests
for path in pathlib.Path.cwd().parents:
    if (path / 'pyproject.toml').is_file():
      sys.path.insert(0, str(path / 'src'))
# Tell Pylint hybrid_property and cached_property are property-types
astroid.bases.POSSIBLE_PROPERTIES.add('hybrid_property')
astroid.bases.POSSIBLE_PROPERTIES.add('cached_property')
'''

[tool.pylint.message_control]
max-line-length = 88
disable = [
  'abstract-method',
  'duplicate-code',
  'fixme',
  'invalid-name',
  'no-member',
  'too-few-public-methods',
  'too-many-ancestors',
  'too-many-arguments',
  'too-many-function-args',
  'too-many-instance-attributes',
  'too-many-lines',
  'too-many-locals',
  'too-many-public-methods',
  'unsupported-membership-test',
  'unused-argument',
  # These need some serious refactoring, so disabled for now
  'too-many-branches',
  'too-many-nested-blocks',
  'too-many-statements',
  # Let Ruff handle these
  'consider-using-f-string',
  'line-too-long',
  'missing-class-docstring',
  'missing-function-docstring',
  'missing-module-docstring',
  'superfluous-parens',
  'wrong-import-order',
  'wrong-import-position',
]

[tool.mypy]
files = '**/*.py'
exclude = 'node_modules'
ignore_missing_imports = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'tests.*'
check_untyped_defs = true
warn_unreachable = false

[tool.bandit]
exclude_dirs = ['node_modules', 'build/lib']

[tool.bandit.assert_used]
skips = ['*/*_test.py', '*/test_*.py']

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Target Python 3.9
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ANN",   # flake8-annotations
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C",     # pylint convention
  "D",     # pydocstyle
  "C4",    # flake8-comprehensions
  "E",     # Error
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "F",     # pyflakes
  "FA",    # flake8-future-annotations
  "G",     # flake8-logging-format
  "I",     # isort
  "INP",   # flake8-no-pep420
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "N",     # pep8-naming
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "PYI",   # flake8-pyi
  "RET",   # flake8-return
  "RUF",   # Ruff
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slots
  "T20",   # flake8-print
  "TRIO",  # flake8-trio
  "UP",    # pyupgrade
  "W",     # Warnings
  "YTT",   # flake8-2020
]
ignore = [
  "ANN002",  # `*args` is implicit `Any`
  "ANN003",  # `**kwargs` is implicit `Any`
  "ANN101",  # `self` type is implicit
  "ANN102",  # `cls` type is implicit
  "ANN401",  # Allow `Any` type
  "C901",    # TODO: Remove after code refactoring
  "D101",
  "D102",
  "D103",
  "D105",    # Magic methods don't need docstrings
  "D106",    # Nested classes don't need docstrings
  "D107",    # `__init__` doesn't need a docstring
  "D203",    # No blank lines before class docstring
  "D212",    # Allow multiline docstring to start on next line after quotes
  "D213",    # But also allow multiline docstring to start right after quotes
  "E402",    # Allow top-level imports after statements
  "E501",    # Allow long lines if the formatter can't fix it
  "EM101",   # Allow Exception("string")
  "EM102",   # Allow Exception(f"string")
  "ISC001",  # Allow implicitly concatenated string literals (required for formatter)
  "RUF012",  # Allow mutable ClassVar without annotation (conflicts with SQLAlchemy)
  "SLOT000", # Don't require `__slots__` for subclasses of str
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow these characters in strings
allowed-confusables = ["‘", "’", "–"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402"] # Allow non-top-level imports
"tests/**.py" = [
  "S101",   # Allow assert
  "ANN001", # Args don't need types (usually fixtures)
  "N802",   # Fixture returning a class may be named per class name convention
  "N803",   # Args don't require naming convention (fixture could be a class)
]

[tool.ruff.lint.isort]
# These config options should match isort config above under [tool.isort]
combine-as-imports = true
extra-standard-library = ['typing_extensions']
split-on-trailing-comma = false
relative-imports-order = 'furthest-to-closest'
known-first-party = []
section-order = [
  'future',
  'standard-library',
  'third-party',
  'first-party',
  'repo',
  'local-folder',
]

[tool.ruff.lint.isort.sections]
repo = ['coaster']

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
